--- a/quizz.html
+++ b/quizz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizz - site de wibo</title>
+    <title>Quizz - site de weebo</title>
     <link rel="stylesheet" href="css/theme.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/common.css" type="text/css">
@@ -14,11 +14,26 @@
 <body>
 
     <main>
+        <div class="titre">
+            <h2>Quizz !</h2>
+            <p>Ce quizz vous est offert par le meilleur codeur du groupe</p>
+        </div>
+
+        <div class="citation">
+            <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
+            <br>
+            <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
+        </div>
+
+        <div class="content">
+            <h3>Votre résultat : (x) win et (x) loose</h3>
+            <p>Vous êtes un weebo</p>
+        </div>
+
 
     </main>
 
 </body>
-<script src="./projetLibre.js"></script>
 <script src="quizz.js"></script>
 
 </html>
