Page principale/index/naviguation/hover
Menu interactif

--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet libre</title>
-    <link rel="stylesheet" href="theme.css" type="text/css">
-        <link rel="stylesheet" href="common.css" type="text/css">
+    <link rel="stylesheet" href="css/theme.css" type="text/css">
+    <link rel="stylesheet" href="css/common.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barriecito&family=Island+Moments&family=Noto+Sans+JP:wght@300&family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <h1>Site pour gros weeboo la</h1>
+        <p class = citation>正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う</p>
+    </header>
+    <div class="Bloc_Nav">
+        <p>P'tite navigation sympatoche</p>
+        <a href="Boruto.html"><div class = "Boruto"><div class = Button>Boruto</div></div></a>
+        <a href="DragonBall.html"><div class = "DB"><div class = Button>Dragon Ball</div></div></a>
+        <a href="Bleach.html"><div class = "Bleach"><div class = Button>Bleach</div></div></a>
+        <a href="OnePiece.html"><div class = "OP"><div class = Button>One Piece</div></div></a>
+        <a href="MyHeroAcademia.html"><div class = "MHA"><div class = Button>My Hero Academia</div></div></a>
+        <a href="CultureInconnue.html"><div class = "Culture"><div class = Button>Culture Inconnue</div></div></a>
+    </div>
+    <footer>
+        <p>Footer de qualitay bonjour</p>
+    </footer>
 </body>
 <script src="./projetLibre.js"></script>
 
