--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <div class="Bloc_Nav">
         <p>P'tite navigation sympatoche</p>
-        <a href="Boruto.html"><div class = "Boruto"><div class = Button>Boruto</div></div></a>
-        <a href="DragonBall.html"><div class = "DB"><div class = Button>Dragon Ball</div></div></a>
-        <a href="Bleach.html"><div class = "Bleach"><div class = Button>Bleach</div></div></a>
-        <a href="OnePiece.html"><div class = "OP"><div class = Button>One Piece</div></div></a>
-        <a href="MyHeroAcademia.html"><div class = "MHA"><div class = Button>My Hero Academia</div></div></a>
+        <a href="boruto.html"><div class = "Boruto"><div class = Button>Boruto</div></div></a>
+        <a href="dbz.html"><div class = "DB"><div class = Button>Dragon Ball</div></div></a>
+        <a href="bleach.html"><div class = "Bleach"><div class = Button>Bleach</div></div></a>
+        <a href="onePiece.html"><div class = "OP"><div class = Button>One Piece</div></div></a>
+        <a href="academia.html"><div class = "MHA"><div class = Button>My Hero Academia</div></div></a>
         <a href="CultureInconnue.html"><div class = "Culture"><div class = Button>Culture Inconnue</div></div></a>
     </div>
     <footer>
