--- a/onePiece.html
+++ b/onePiece.html
@@ -6,12 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece - site de weebo</title>
-    <link rel="stylesheet" href="css/theme.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/common.css" type="text/css">
+    <link rel="stylesheet" href="../css/theme.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/common.css" type="text/css">
 </head>
 
-<body>
+<body id ="home">
+     <header>
+        <h1>Site pour gros weeboo la</h1>
+        <p class = citation>正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う</p>
+    </header>
+    <div class="Bloc_Nav">
+        <p></p>
+        <a href="boruto.html"><div class = "Boruto"><div class = Button>Boruto</div></div></a>
+        <a href="dbz.html"><div class = "DB"><div class = Button>Dragon Ball</div></div></a>
+        <a href="bleach.html"><div class = "Bleach"><div class = Button>Bleach</div></div></a>
+        <a href="onePiece.html"><div class = "OP"><div class = Button>One Piece</div></div></a>
+        <a href="academia.html"><div class = "MHA"><div class = Button>My Hero Academia</div></div></a>
+        <a href="CultureInconnue.html"><div class = "Culture"><div class = Button>Culture Inconnue</div></div></a>
+    </div>
 
     <main class="onePiece">
         <div class="titre">
@@ -20,14 +33,14 @@
                 en juin 2021.</p>
         </div>
 
-        <div class="citation">
+        <div class="citation1">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
         </div>
 
         <div class="content">
-            <img class="img1" src="image/1008181.jpg" alt="Le grand méchant loup">
+            <img class="img1" src="../image/1008181.jpg" alt="Le grand méchant loup">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -35,7 +48,7 @@
         </div>
         <div class="clear"></div>
         <div class="content">
-            <img class="img2" src="image/thumb-1920-1038723.jpg" alt="Un mec avec des gros yeux">
+            <img class="img2" src="../image/thumb-1920-1038723.jpg" alt="Un mec avec des gros yeux">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -43,7 +56,7 @@
         </div>
         <div class="clear"></div>
         <div class="content">
-            <img class="img1 imgPetite" src="image/wallpapersden.com_one-piece-team-art_2560x1080.jpg" alt="Luffy il est vraiment moche en vrai">
+            <img class="img1 imgPetite" src="../image/wallpapersden.com_one-piece-team-art_2560x1080.jpg" alt="Luffy il est vraiment moche en vrai">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -51,6 +64,9 @@
         </div>
 
     </main>
+    <footer style="text-align: center;">
+        <p><a href="#home">Haut de Page</a></p>
+    </footer>
 
 </body>
 <script src="./projetLibre.js"></script>
