--- a/academia.html
+++ b/academia.html
@@ -12,15 +12,28 @@
 
 </head>
 
-<body>
-
+<body id ="home">
+     <header>
+        <h1>Site pour gros weeboo la</h1>
+        <p class = citation>正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う</p>
+    </header>
+    <div class="Bloc_Nav">
+        <p></p>
+        <a href="boruto.html"><div class = "Boruto"><div class = Button>Boruto</div></div></a>
+        <a href="dbz.html"><div class = "DB"><div class = Button>Dragon Ball</div></div></a>
+        <a href="bleach.html"><div class = "Bleach"><div class = Button>Bleach</div></div></a>
+        <a href="onePiece.html"><div class = "OP"><div class = Button>One Piece</div></div></a>
+        <a href="academia.html"><div class = "MHA"><div class = Button>My Hero Academia</div></div></a>
+        <a href="CultureInconnue.html"><div class = "Culture"><div class = Button>Culture Inconnue</div></div></a>
+    </div>
+   
     <main class="onePiece">
         <div class="titre">
             <h2>My Hero Academia</h2>
-            <p>My Hero Academia (僕のヒーローアカデミア, Boku no Hīrō Akademia?) est un shōnen manga écrit et dessiné par Kōhei Horikoshi. Il est pré-publié depuis juillet 2014 dans le magazine Weekly Shōnen Jump de l'éditeur Shūeisha, et compte trente-deux tomes à ce jour. La version française est publiée par Ki-oon depuis avril 2016 et compte trente tomes à ce jour.</p>
+            <p>My Hero Academia (僕のヒーローアカデミア, Boku no Hīrō Akademia) est un shōnen manga écrit et dessiné par Kōhei Horikoshi. Il est pré-publié depuis juillet 2014 dans le magazine Weekly Shōnen Jump de l'éditeur Shūeisha, et compte trente-deux tomes à ce jour. La version française est publiée par Ki-oon depuis avril 2016 et compte trente tomes à ce jour.</p>
         </div>
 
-        <div class="citation">
+        <div class="citation1">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
@@ -51,7 +64,9 @@
         </div>
 
     </main>
-
+     <footer>
+        <p><a href="#home">Haut de Page</a></p>
+    </footer>
 </body>
 <script src="./projetLibre.js"></script>
 
