--- a/boruto.html
+++ b/boruto.html
@@ -12,7 +12,20 @@
 
 </head>
 
-<body>
+<body id ="home">
+     <header>
+        <h1>Site pour gros weeboo la</h1>
+        <p class = citation>正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う</p>
+    </header>
+    <div class="Bloc_Nav">
+        <p></p>
+        <a href="boruto.html"><div class = "Boruto"><div class = Button>Boruto</div></div></a>
+        <a href="dbz.html"><div class = "DB"><div class = Button>Dragon Ball</div></div></a>
+        <a href="bleach.html"><div class = "Bleach"><div class = Button>Bleach</div></div></a>
+        <a href="onePiece.html"><div class = "OP"><div class = Button>One Piece</div></div></a>
+        <a href="academia.html"><div class = "MHA"><div class = Button>My Hero Academia</div></div></a>
+        <a href="CultureInconnue.html"><div class = "Culture"><div class = Button>Culture Inconnue</div></div></a>
+    </div>
 
     <main class="onePiece">
         <div class="titre">
@@ -20,7 +33,7 @@
             <p>Boruto: Naruto Next Generations (BORUTO-ボルト- -NARUTO　NEXT　GENERATIONS-, Boruto: Naruto Nekusuto Jenerēshonzu) est un manga dérivé faisant suite au manga Naruto, par Ukyō Kodachi et dessiné par Mikio Ikemoto, sous la supervision de Masashi Kishimoto, l'auteur du manga Naruto, qui devient scénariste principal fin 2020. </p>
         </div>
 
-        <div class="citation">
+        <div class="citation1">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
@@ -51,6 +64,9 @@
         </div>
 
     </main>
+    <footer style="text-align: center;">
+        <p><a href="#home">Haut de Page</a></p>
+    </footer>
 
 </body>
 <script src="./projetLibre.js"></script>
