--- a/quizz.html
+++ b/quizz.html
@@ -12,28 +12,75 @@
 </head>
 
 <body>
+    <div class="all-content">
+        <header>
+            <h1>Site pour gros weeboo la</h1>
+            <p class=c itation>正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う</p>
+        </header>
 
-    <main>
-        <div class="titre">
-            <h2>Quizz !</h2>
-            <p>Ce quizz vous est offert par le meilleur codeur du groupe</p>
+        <div class="Bloc_Nav">
+            <p>P'tite navigation sympatoche</p>
+            <a href="boruto.html">
+                <div class="Boruto">
+                    <div class=Button>Boruto</div>
+                </div>
+            </a>
+            <a href="dbz.html">
+                <div class="DB">
+                    <div class=Button>Dragon Ball</div>
+                </div>
+            </a>
+            <a href="bleach.html">
+                <div class="Bleach">
+                    <div class=Button>Bleach</div>
+                </div>
+            </a>
+            <a href="onePiece.html">
+                <div class="OP">
+                    <div class=Button>One Piece</div>
+                </div>
+            </a>
+            <a href="academia.html">
+                <div class="MHA">
+                    <div class=Button>My Hero Academia</div>
+                </div>
+            </a>
+            <a href="CultureInconnue.html">
+                <div class="Culture">
+                    <div class=Button>Culture Inconnue</div>
+                </div>
+            </a>
         </div>
 
-        <div class="citation">
-            <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
-            <br>
-            <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
-        </div>
+        <main>
+            <div class="titre">
+                <h2>Quizz !</h2>
+                <p>Ce quizz vous est offert par le meilleur codeur du groupe</p>
+            </div>
 
-        <div class="content">
-            <h3>Votre résultat : (x) win et (x) loose</h3>
-            <p>Vous êtes un weebo</p>
-        </div>
+            <div class="citation">
+                <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
+                <br>
+                <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
+            </div>
 
+            <div class="content-quizz">
+                <button id="btn">Démarrer le test</button>
+            </div>
 
-    </main>
+            <div class="content-quizz" id="result-quizz">
+                <h3><span id="win">x</span><span id="loose">x</span></h3>
+                <p id="result"></p>
+            </div>
+        </main>
+
+        <footer>
+            <p>Footer de qualitay bonjour</p>
+        </footer>
+    </div>
 
 </body>
 <script src="quizz.js"></script>
+<script src="ayaya.js"></script>
 
 </html>
