--- a/academia.html
+++ b/academia.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="content">
-            <img class="img1 lessHeight" src="../image/R (14).jpg" alt="academia">
+            <img class="img1 lessHeight" src="image/R (14).jpg" alt="academia">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -48,7 +48,7 @@
         </div>
         <div class="clear"></div>
         <div class="content">
-            <img class="img2 lessHeight" src="../image/R (15).jpg" alt="academia">
+            <img class="img2 lessHeight" src="image/R (15).jpg" alt="academia">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -56,7 +56,7 @@
         </div>
         <div class="clear"></div>
         <div class="content">
-            <img class="img1 lessHeight imgPetite" src="../image/R (16).jpg" alt="academia">
+            <img class="img1 lessHeight imgPetite" src="image/R (16).jpg" alt="academia">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
