--- a/dbz.html
+++ b/dbz.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dragon Ball Z - site de wibo</title>
-    <link rel="stylesheet" href="../css/style.css" type="text/css">
-    <link rel="stylesheet" href="../css/common.css" type="text/css">
-    <link rel="stylesheet" href="../css/theme.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/common.css" type="text/css">
+    <link rel="stylesheet" href="css/theme.css" type="text/css">
 
 </head>
 
@@ -40,7 +40,7 @@
         </div>
 
         <div class="content">
-            <img class="img1" src="../image/R (11).jpg" alt="sangoku">
+            <img class="img1" src="image/R (11).jpg" alt="sangoku">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -48,7 +48,7 @@
         </div>
         <div class="clear"></div>
         <div class="content">
-            <img class="img2" src="../image/R (12).jpg" alt="dbz">
+            <img class="img2" src="image/R (12).jpg" alt="dbz">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
@@ -56,7 +56,7 @@
         </div>
         <div class="clear"></div>
         <div class="content">
-            <img class="img1 imgPetite" src="../image/R (9).jpg" alt="random">
+            <img class="img1 imgPetite" src="image/R (9).jpg" alt="random">
             <p>Lorem ipsum dolor sit amet. Ea voluptatum sint ut laboriosam qui laborum maxime eum quam totam eum impedit tenetur. Quo reprehenderit animi vel omnis quia et atque quia et omnis corrupti. Rem mollitia ratione qui dignissimos amet quo odit
                 corporis est enim temporibus in consequatur dicta non galisum eligendi qui cumque quam? Sit obcaecati quaerat neque amet est error magni non omnis voluptatibus non ipsum blanditiis.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt dicta reiciendis excepturi quo quidem, nisi enim ut odit aperiam obcaecati a quos ad modi quae saepe, voluptatem facilis consequatur harum. Aut quasi aspernatur voluptas. Praesentium
