--- a/academia.html
+++ b/academia.html
@@ -33,7 +33,7 @@
             <p>My Hero Academia (僕のヒーローアカデミア, Boku no Hīrō Akademia) est un shōnen manga écrit et dessiné par Kōhei Horikoshi. Il est pré-publié depuis juillet 2014 dans le magazine Weekly Shōnen Jump de l'éditeur Shūeisha, et compte trente-deux tomes à ce jour. La version française est publiée par Ki-oon depuis avril 2016 et compte trente tomes à ce jour.</p>
         </div>
 
-        <div class="citation1">
+        <div class="citation">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
