--- a/bleach.html
+++ b/bleach.html
@@ -33,7 +33,7 @@
             <p>Bleach (BLEACH, ブリーチ, Burīchi?) est un shōnen manga écrit et illustré par Tite Kubo. Il est prépublié dans l'hebdomadaire Weekly Shōnen Jump de l'éditeur Shūeisha du 7 août 2001 au 22 août 2016 et est compilé en 74 tomes au 4 novembre 20161.</p>
         </div>
 
-        <div class="citation1">
+        <div class="citation">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
