--- a/boruto.html
+++ b/boruto.html
@@ -33,7 +33,7 @@
             <p>Boruto: Naruto Next Generations (BORUTO-ボルト- -NARUTO　NEXT　GENERATIONS-, Boruto: Naruto Nekusuto Jenerēshonzu) est un manga dérivé faisant suite au manga Naruto, par Ukyō Kodachi et dessiné par Mikio Ikemoto, sous la supervision de Masashi Kishimoto, l'auteur du manga Naruto, qui devient scénariste principal fin 2020. </p>
         </div>
 
-        <div class="citation1">
+        <div class="citation">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
