--- a/dbz.html
+++ b/dbz.html
@@ -33,7 +33,7 @@
             <p>Dragon Ball Z (ドラゴンボールZ(ゼット), Doragon Bōru Zetto, abréviation commune DBZ est une série télévisée d'animation japonaise adaptée de la franchise Dragon Ball d'Akira Toriyama et produite par Toei Animation. Cette série fait suite à l’anime Dragon Ball et adapte les vingt-six derniers volumes du manga.</p>
         </div>
 
-        <div class="citation1">
+        <div class="citation">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
