--- a/onePiece.html
+++ b/onePiece.html
@@ -33,7 +33,7 @@
                 en juin 2021.</p>
         </div>
 
-        <div class="citation1">
+        <div class="citation">
             <em>" Shôjiki, boku wa pankêki to rabiori ga daisuki ga manga ha hontô ni mendokusai to omô "</em>
             <br>
             <em>" 正直、僕はパンケーキとラビオリが大好きが漫画は本当に面倒くさいと思う "</em>
